# agent-ai

scrapping/: main.py  pyproject.toml  requirements.txt  streamlit_app.py
scrapping/Frontend/: main copy.py  requirements.txt  streamlit_app.py
scrapping/backend/: requirements.txt  stripe_payment.py
