[project]
name = "scrapping"
version = "0.1.0"
description = "Web scraping tool (Samad)"
readme = "README.md"
requires-python = ">=3.10"  # Use 3.10 or 3.11; 3.13 is too new for most packages
dependencies = [
    "beautifulsoup4>=4.12.2",
    "fastapi>=0.95.0",
    "httpx>=0.24.0",
    "openai>=0.27.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.24.0",
    "uvicorn>=0.22.0",
    "selenium>=4.18.0",
    "undetected-chromedriver>=3.5.5"
]
